--- a/UnitTestMathsService/UnitTestMathsService.csproj
+++ b/UnitTestMathsService/UnitTestMathsService.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyMathsService\MyMathsService.csproj" />
+  </ItemGroup>
+
 </Project>
