--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,18 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
+      - name: Check Out Repo 
+        uses: actions/checkout@v2
+        
+      - name: Run a one-line script
+        run: echo Hello, world! ${{ secrets.DOCKER_HUB_USERNAME }} // ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      
+          
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
@@ -42,8 +46,8 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/carservice:latest
-          
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+        
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
         
